mover package.json para server

--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,7 @@
 {
-  "name": "spotify-mpb-server",
-  "version": "1.0.0",
-  "description": "Servidor proxy seguro para buscar dados da API do Spotify",
-  "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "author": "Seu Nome",
-  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2"
   }
